--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import './helper/varieables';
 @import './helper/mixins';
 @import './helper/keyframes';
+@import './helper/swiper';
 @import './header/nav';
 @import './header/header';
 @import './header/run';
