--- a/scss/footer/_footer.scss
+++ b/scss/footer/_footer.scss
@@ -1,11 +1,16 @@
-
+.slick-current {
+    outline: none;
+}
 
 .footer {
     @include position(auto, auto, column, flex-start, left, 0, center);
     margin: auto;
     max-width: 1440px;
     margin-top: 50px;
-    
+    &__link {
+        outline: none;
+    }
+
     &__contacs {
         @include position(60%, auto, row, flex-start, left, auto, center);
         flex-wrap: wrap;
@@ -19,6 +24,10 @@
         &--link {
             @include font($roboto-font, sans-serif, 16px, normal, normal, uppercase, #000, 16px, none);
             &:hover {
+                text-decoration: underline;
+            }
+            outline: none;
+            &:focus-visible {
                 text-decoration: underline;
             }
         }
