--- a/scss/header/_header.scss
+++ b/scss/header/_header.scss
@@ -2,7 +2,7 @@
 
 .header {
     background-color: rgb(250,245,251);
-    @include position(100%, max-content, column, center, center, auto, center);
+    @include position(100%, auto, column, center, center, auto, center);
     border-bottom: 1px solid #EAC1BF;
     flex-grow: 1;
     background-image: url("../img/header/back-ground-header.png");
@@ -16,7 +16,7 @@
     }
     &__container {
         overflow-y: auto;
-        height: 100vh;
+        height: 100%;
         display: flex;
         flex-direction: column;
     }
@@ -27,7 +27,7 @@
         max-height: 550px;
         &__name {
             word-wrap: normal;
-            @include font ($ogg-font, serif, 117px, 400, italic, none, #000000, 120px, none);
+            @include font ($spectral-font, serif, 117px, 400, italic, none, #000000, 120px, none);
         }
     }
     &__btn {
@@ -39,6 +39,12 @@
         background: #000000;
         cursor: pointer;
         @include font($roboto-font, sans-serif, 20px, 400, normal, uppercase, #FFFFFF, 30px, none);
+        outline: none;
+        &:focus-visible {
+            background: #fff;
+            color: #000;
+            border: 2px solid #000;
+        }
         &:hover {
             background: #fff;
             color: #000;
@@ -53,7 +59,7 @@
     .header {
         &__title {
             &__name {
-                @include font ($ogg-font, serif, 70px, 400, italic, none, #000000, 80px, none);
+                @include font ($spectral-font, serif, 70px, 400, italic, none, #000000, 80px, none);
             }
         }
         &__btn {
@@ -75,10 +81,10 @@
             height: 120px;
             font-size: 16px;
             line-height: 16px;
+            margin-bottom: 20px;
         }
     }
 };
-@media (max-width: 768px) { };
 @media (max-width: 576px) {
     .header {
         height: auto;
@@ -92,7 +98,7 @@
             margin-bottom: 5%;
             &__name {
                 padding-top: 0;
-                @include font ($ogg-font, serif, 40px, 400, italic, none, #000000, 43px, none)
+                @include font ($spectral-font, serif, 40px, 400, italic, none, #000000, 43px, none)
             }
         }
 
