--- a/scss/header/_nav.scss
+++ b/scss/header/_nav.scss
@@ -3,6 +3,9 @@
     @include position(100%, auto, row, space-between, left, auto, center);
     max-width: 1440px;
     min-height: 70px;
+
+    padding-top: 5px;
+    padding-bottom: 10px;
     &__burger{
         padding-left: 58px;
         position: fixed;
@@ -20,6 +23,10 @@
             cursor: pointer;
             @include position(40px, 40px, row, left, left, auto, center);
             border-radius: 6px;
+            outline: none;
+            &:focus-visible {
+                border: 1px solid #000;
+            }
             &:hover {
                 background-color: #000;
                 .nav__burger__line {
@@ -36,27 +43,27 @@
         &__line {
             background-color: rgba(0, 0, 0, 1);
             position: absolute;
-            top: 12px;
+            top: 11px;
             left: 6px;
             @include position(28px, 2px, row, left, left, auto, center);
             &::after {
                 content: '';
                 background: #111111;
                 position: absolute;
-                top: 14px;
+                top: 16px;
                 @include position(28px, 2px, row, left, left, auto, center);
             }
             &::before {
                 content: '';
                 background: #111111;
                 position: absolute;
-                top: 7px;
+                top: 8px;
                 @include position(28px, 2px, row, left, left, auto, center);
             }
         }
         
     }
-    &__label {
+    &__advertisement {
         @include position(50%, auto, row, left, left, auto, center);
         margin-left: 25%;
         padding-top: 10px;
@@ -65,6 +72,10 @@
             letter-spacing: .5px;
             color: #000000;
             text-decoration: none;
+            outline: none;
+            &:focus-visible {
+                text-decoration: underline;
+            }
         }
         &__title { 
             width: max-content;
@@ -83,15 +94,18 @@
         @include position(30%, auto, row, flex-end, left, 0, center);
         max-width: max-content;
         z-index: 1;
-        background: rgba(255, 255, 255, 1);
         
         &__link{
             margin: 0;
-            margin-right: 12px;
+            margin-right: 27px;
             width: max-content;
+            outline: none;
+            &:focus-visible {
+                border: 1px solid #000;
+            }
         }
         &--search {
-            width: 65px;
+            margin-right: 40px;
         }
     }
     &__search {
@@ -101,33 +115,33 @@
         outline: none;
         padding-left: 10px;
         @include font ($roboto-font, sans-serif, 16px, 500,normal, none, #000000, 16px, none);
-        &--wrapper {
-            z-index: 0;
-            justify-content: flex-end;
-            margin-right: 5%;
-        }
     }
 };
 .list {
     background-color: rgba(255, 255, 255, 1);
     position: absolute;
-    top: 10px;
+    top: 5px;
     left: 40px;
     width: max-content;
-    height: 190px;
+    height: auto;
     border-radius: 6px;
-    padding-right: 20px;
-    padding-bottom: 20px;
     overflow-y: hidden;
     animation-name: burger-dropdown;
     animation-duration: 1s;
     animation-timing-function: ease-in;
+    padding: 20px 10px;
     &__element {
         list-style: square;
         margin-top: 15px;
+
     }
     &__link {
+        padding: 10px;
         @include font ($roboto-font, sans-serif, 16px, 500, normal, uppercase, #000, 20px,  none);
+        outline: none;
+            &:focus-visible {
+                text-decoration: underline;
+            }
         &:hover {
             text-decoration: underline;
             
@@ -149,22 +163,18 @@
 }
 @media (max-width: 1200px) {
     .nav {
-        &__search {
-            &--wrapper {
-                margin-right: 2%;
-            }
-        }
+    
     }
 }
 @media (max-width: 991px) {
     .nav {
-        &__label {
+        &__advertisement {
             display: none;
         }
-        &__search {
-            &--wrapper {
-                margin-right: 8%;
-            }
+        &__tools {
+            position: absolute;
+            right: 0px;
+            z-index: 0;
         }
     }
 }
@@ -173,11 +183,19 @@
 @media (max-width: 576px) { 
     .nav {
         &__search {
-            &--wrapper {
                 position: relative;
-                top: 50px;
-                left: 50px;
-            }
+                top: 65px;
+                left: 120px;
         }
     }
+}
+
+.activate__search {
+    animation-name: open-search;
+    animation-duration: 600ms;
+}
+
+.disactivate__search {
+    animation-name: close-search;
+    animation-duration: 600ms;
 }
