--- a/scss/header/_run.scss
+++ b/scss/header/_run.scss
@@ -26,6 +26,10 @@
             -webkit-text-fill-color: transparent;
             background-color: #fff;
                 mix-blend-mode: screen;
+                outline: none;
+                &:focus-visible {
+                    border: 1px solid #000;
+                }
             }
         }
     }
