--- a/scss/main/_club.scss
+++ b/scss/main/_club.scss
@@ -15,7 +15,7 @@
     &__content {
         @include position(20%, 300px, column, left, left, auto, center);
         &--title {
-            @include font($ogg-font, serif, 48px, normal, normal, none, #000, 56px, none);
+            @include font($spectral-font, serif, 48px, normal, normal, none, #000, 56px, none);
         }
         &--text {
             @include font($roboto-font, sans-serif, 16px, normal, normal, none, #000, 24px, none);
@@ -30,6 +30,12 @@
             cursor: pointer;
             background-color: #000000;
             @include font($roboto-font, sans-serif, 20px, 500, normal, uppercase, #FFF, 20px, none);
+            outline: none;
+            &:focus-visible {
+                color: #000;
+                background-color: #fff;
+                border: 2px solid #000;
+            }
             &:hover {
                 color: #000;
                 background-color: #fff;
@@ -99,7 +105,7 @@
     .club {
         &__content {
             &--title {
-                @include font($ogg-font, serif, 28px, normal, normal, none, #000, 30px, none);
+                @include font($spectral-font, serif, 28px, normal, normal, none, #000, 30px, none);
             }
             &--text {
                 width: 90%;
