--- a/scss/main/_itention.scss
+++ b/scss/main/_itention.scss
@@ -7,7 +7,7 @@
     &__title {
         margin-bottom: 0;
         padding-top: 10px;
-        @include font($ogg-font, serif, 47px, normal, normal, none, #000, 50px, none);
+        @include font($spectral-font, serif, 47px, normal, normal, none, #000, 50px, none);
     }
     &__content {
         @include position(90%, auto, row, space-between, center, auto, center);
@@ -21,12 +21,20 @@
             background-color: rgba(0, 0, 0, 0);
             margin-bottom: 15px;
             cursor: pointer;
+            outline: none;
+            &:focus-visible {
+                border: 1px solid #000;
+            }
             :hover {
                 background: radial-gradient(closest-side, #B956BB,#FBF9F9 120%);
             };
         }
         &--title{
             @include font($roboto-font, sans-serif, 16px, normal, normal, uppercase, #000, 16px, none);
+            outline: none;
+            &:focus-visible {
+                text-decoration: underline;
+            }
         }
     }
 }
@@ -52,7 +60,7 @@
 @media (max-width: 576px) {
     .itention {
         &__title {
-            @include font($ogg-font, serif, 27px, normal, normal, none, #000, 30px, none);
+            @include font($spectral-font, serif, 27px, normal, normal, none, #000, 30px, none);
         }
     }
 }
